--- a/Module1/02_20_2025_Module1_NB2_ADNI_ADClassification.ipynb
+++ b/Module1/02_20_2025_Module1_NB2_ADNI_ADClassification.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "AnxbFfS2dODK"
       },
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "XVuhGwZTjUWa"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "-ObBoWmnv-2K"
       },
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "4as31RZnwQJB"
       },
@@ -329,12 +329,12 @@
       "metadata": {
         "id": "qwLPTinUAjNe"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Na6-KOYjd6dl"
       },
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "Yg94iHnHAvkf"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
         "id": "t-xPSycSrW4j",
         "outputId": "27a2925c-d88b-4073-c264-89cae712b95f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
         "id": "DfhaMKgnrsXu",
         "outputId": "0c2562ca-d66b-4e75-a192-c4cc58f52528"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +495,7 @@
         "id": "5YInjnlKrw7H",
         "outputId": "3cc5a117-656f-4aff-fd78-88699e7b0f1f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +530,7 @@
       "metadata": {
         "id": "-WlIx2SIqju3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -545,7 +545,7 @@
         "id": "uISlCzUNsJ8k",
         "outputId": "7d5b726b-05c1-41f5-dff2-be7f2c0b9f97"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
       "metadata": {
         "id": "uDMh__4GsYKl"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +615,7 @@
       "metadata": {
         "id": "Ba-thUxzsbEB"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -640,7 +640,7 @@
         "id": "zPKJrleZBCtm",
         "outputId": "cfa8d58d-b14b-4f7f-893f-9ec48a90200e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,7 +986,7 @@
         "id": "EQtql0LTztLW",
         "outputId": "e7c292ba-03ad-400f-a7fe-70d007e58067"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1057,7 +1057,7 @@
         "id": "39MtSA0gA8JF",
         "outputId": "4144a027-8906-4127-ba08-7d06868f1f1b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1083,7 @@
       "metadata": {
         "id": "8QRH_YgqBK8R"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1098,7 +1098,7 @@
         "id": "2XHY-uTJBMvJ",
         "outputId": "65e74999-7609-46a7-f0ec-e492f4020c3f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,7 +1142,7 @@
         "id": "7cjIN7z-7Ayc",
         "outputId": "4a7db58f-3262-4bd6-f7fd-5af67e0247d5"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1168,7 +1168,7 @@
         "id": "4rDC0BqQ7DjF",
         "outputId": "57b8ee6c-2988-4f72-aae7-b454419da163"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,7 +1204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1232,7 +1232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1639,7 +1639,7 @@
       "metadata": {
         "id": "LlqboaJ8DCmm"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1656,7 +1656,7 @@
       "metadata": {
         "id": "TV2U9kQXGuK9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1669,7 +1669,7 @@
       "metadata": {
         "id": "Pi74OEhl4YQX"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1682,7 +1682,7 @@
       "metadata": {
         "id": "yebjhZWk4bWx"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1697,7 +1697,7 @@
         "id": "TKnlYnwVJhQa",
         "outputId": "e2e06914-eb53-4b91-a888-eb80fe8fdf91"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1721,7 @@
       "metadata": {
         "id": "RoSNbPG9ympb"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1736,7 +1736,7 @@
         "id": "0t8RZwvqytjt",
         "outputId": "1ca2d92c-a7ef-41b3-d5b4-ae6129f26170"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1761,7 +1761,7 @@
         "id": "1pf70Zx_yxBL",
         "outputId": "f741bba6-7955-4f0e-a9dd-dbaaf1a1cd97"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1809,7 +1809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "EDDBXrJmAQTB"
       },
@@ -1837,7 +1837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "95etOqhOA9PU"
       },
@@ -1909,7 +1909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "gfHDKDpbHI2-"
       },
@@ -1939,7 +1939,7 @@
       "metadata": {
         "id": "c_DBj8NDwxxB"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1950,7 +1950,7 @@
       "metadata": {
         "id": "edmsG9yQw1yY"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1961,7 +1961,7 @@
       "metadata": {
         "id": "XdYle9r7w5ji"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1976,7 +1976,7 @@
         "id": "TvBUhucex4eH",
         "outputId": "766c7e87-3049-4136-896f-4f714226be13"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2003,7 +2003,7 @@
         "id": "iFJHkWd7yH8I",
         "outputId": "adbfda2e-6731-4464-d0d7-912a608f0ce8"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2049,7 +2049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2085,7 +2085,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "ZzyV1_ijetzp"
       },
@@ -2125,7 +2125,7 @@
         "id": "nvPJRZOZ1hK7",
         "outputId": "9e4596d7-5d62-46f9-cda3-e79e401d88bd"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2151,7 +2151,7 @@
         "id": "FfFBiO7g1MoZ",
         "outputId": "f4f348db-f284-4eec-ecf3-0141565f7973"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2182,7 +2182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "KIPBQbInHprI"
       },
@@ -2221,7 +2221,7 @@
         "id": "Ta0ofKgOzIGK",
         "outputId": "530ac1fa-f6aa-44b6-8ee3-b4e97efa6297"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2245,7 +2245,7 @@
         "id": "Wc37I4_RzKa2",
         "outputId": "e218397e-787f-490e-8d7a-4f5d0d21793e"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2309,7 +2309,7 @@
         "id": "rpfCAzv-4FLe",
         "outputId": "e0778450-eea2-4f92-8040-50c2ba5c034e"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2346,7 +2346,7 @@
       "metadata": {
         "id": "jzTdTswy4JHp"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2393,7 +2393,7 @@
         "id": "RFTpcJgQ4shK",
         "outputId": "b392259e-a146-424c-fbed-3cf9a003e2d3"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2449,6 +2449,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Save the metrics\n",
+        "train_losses, val_losses, val_accuracies = [], [], [\n",
+        "\n",
         "# Unfreeze all layers in the base model for fine-tuning\n",
         "for param in resnet18.parameters():\n",
         "    param.requires_grad = True\n",
@@ -2457,7 +2460,7 @@
         "optimizer = optim.Adam(resnet18.parameters(), lr=0.00001)  # Lower learning rate for fine-tuning\n",
         "\n",
         "# Continue training with fine-tuning\n",
-        "num_epochs_fine = 5\n",
+        "num_epochs_fine = 8\n",
         "for epoch in range(num_epochs_fine):\n",
         "    resnet18.train()  # Set model to training mode\n",
         "    running_loss = 0.0\n",
@@ -2488,6 +2491,11 @@
         "\n",
         "    val_loss /= len(val_loader)  # Compute average validation loss\n",
         "    val_accuracy = correct / len(val_loader.dataset)  # Compute validation accuracy\n",
+        "\n",
+        "    train_losses.append(train_loss)\n",
+        "    val_losses.append(val_loss)\n",
+        "    val_accuracies.append(val_accuracy)\n",
+        "\n",
         "    print(f\"Fine-tuning Epoch {epoch+1}/{num_epochs_fine}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_accuracy:.4f}\")"
       ],
       "metadata": {
@@ -2535,14 +2543,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Placeholder for storing loss and accuracy history\n",
-        "train_losses, val_losses, val_accuracies = [], [], []\n",
-        "\n",
-        "# After each epoch, append the metrics\n",
-        "# train_losses.append(train_loss)\n",
-        "# val_losses.append(val_loss)\n",
-        "# val_accuracies.append(val_accuracy)\n",
-        "\n",
         "def plot_learning_curves():\n",
         "    \"\"\"Plot training and validation loss and accuracy over epochs.\"\"\"\n",
         "    epochs = range(1, len(train_losses) + 1)\n",
